# taskr

./: .gitignore  Cargo.toml  README.md  dev.sh  install.sh
cli/: Cargo.toml
cli/src/: main.rs
common/: Cargo.toml
common/src/: conf.rs  lib.rs  notify.rs  utils.rs
daemon/: Cargo.toml
daemon/src/: main.rs  task_exec.rs
