[package]
name = "taskr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive", "cargo"] }
uuid = { version = "1.5.0", features = ["serde", "v4"] }
common = { path = "../common" }
libc = "0.2.150"
