[package]
name = "common"
version = "0.1.0"
edition = "2021"
# You can also specify authors, description, repository, etc.

[dependencies]
# Any dependencies needed by the shared utilities.
# For example, if you're using serde for serialization:
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.5.0", features = ["serde", "v4"] }
libc = "0.2.150"
reqwest = { version = "0.11.22", features = ["serde_json", "json", "blocking"] }
